<resources>
    <string name="app_name">BuildmLearn Toolkit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_load_project">Saved Projects</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_drafts">My Drafts</string>
    <string name="menu_how_to">How to</string>
    <string name="menu_about_us">About BuildmLearn</string>
    <string name="menu_home">Home</string>
    <string name="buildmlearn_welcome_title">Welcome to BuildmLearn Toolkit</string>
    <string name="welcome">Welcome</string>
    <string name="snackbar_deleted_message">Item deleted</string>
    <string name="snackbar_undo">UNDO</string>
    <string name="snackbar_restored_message">Item restored</string>
    <string name="buildmlearn_welcome_text">The BuildmLearn Toolkit is an easy-to-use program that helps users make mobile apps without any knowledge of application development.\n\nThe toolkit helps creating mobile application with various functionality and allows teachers to input their custom content.</string>
    <string name="add_item_help">Click Add button to start adding items</string>
    <string name="draft_deleted">Draft Successfully Deleted!</string>
    <string name="draft_deleted_failed">Draft Deletion Failed!</string>
    <string name="dialog_delete_all_msg">Are you sure you clear you Draft?</string>
    <string name="dialog_delete_all_title">Delete All</string>
    <string name="no_saved_drafts">"No Saved Drafts Yet"</string>
    <string name="dialog_restore_title">Restore Project</string>
    <string name="dialog_restore_failed">Unable to restore Project from given apk</string>
    <string name="dialog_restore_fileerror">Unable to load given apk</string>
    <string name="app_name_quiz">Quiz Time</string>
    <string name="completed_message_quiz">Hurrah! You have completed the Quiz.</string>
    <string name="total_correct">Total Correct : %1$d</string>
    <string name="total_wrong">Total Wrong : %1$d</string>
    <string name="total_unanswered">Total Unanswered : %1$d</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_delete_msg">Are you sure you want to delete this item?</string>
    <string name="dialog_delete_title">Delete</string>
    <string name="title_activity_simulator">Simulator</string>
    <string name="title_activity_template">Templates</string>
    <string name="info_template_word">Word</string>
    <string name="info_template_word_hint">Enter title</string>
    <string name="info_template_meaning">Description</string>
    <string name="info_template_meaning_hint">Enter description</string>
    <string name="info_template_add">Add</string>
    <string name="info_template_ok">OK</string>
    <string name="info_template_cancel">Cancel</string>
    <string name="info_add_new_title">Add new item</string>
    <string name="info_edit_title">Edit item</string>
    <string name="info_template">InfoTemplate</string>
    <string name="main_title_info">Info App</string>
    <string name="list_empty_info">List is Empty!</string>
    <string name="previous_info">PREVIOUS</string>
    <string name="next_info">NEXT</string>
    <string name="no_saved_projects">No Saved Projects yet</string>
    <string name="exit_info">EXIT</string>
    <string name="about_text_info">This application has been developed using the BuildmLearn Toolkit.\n\nTo know more about BuildmLearn Toolkit visit <a href="https://buildmlearn.org/">here</a>.</string>
    <string name="info_thumbnail_info">Info Thumbnail</string>
    <string name="enter_word">Enter a word.</string>
    <string name="flash_card_template">FlashCardsTemplate</string>
    <string name="flash_photo_source">Select image source</string>
    <string name="flash_templete_question">Question</string>
    <string name="flash_template_answer">Answer</string>
    <string name="flash_template_attach_image">Attach an image</string>
    <string name="flash_template_hint">Answer Hint</string>
    <string name="flash_template_question_hint">Enter Question</string>
    <string name="flash_template_anser_hint">Enter Answer</string>
    <string name="flash_template_hint_hint">Enter Hint (Optional)</string>
    <string name="main_title_flash">Learn with FlashCards</string>
    <string name="next_flash">NEXT</string>
    <string name="exit_flash">EXIT</string>
    <string name="restart_flash">RESTART</string>
    <string name="buildmlearn_logo_flash">BuildmLearn Logo</string>
    <string name="completed_message_flash">Hurrah! You have completed.\nThat was the last card!</string>
    <string name="previous_flash">PREVIOUS</string>
    <string name="flip_flash">FLIP</string>
    <string name="backdrop_image_flash">Backdrop image</string>
    <string name="submit">SUBMIT</string>
    <string name="restart">Restart</string>
    <string name="exit">Exit</string>
    <string name="high">High</string>
    <string name="speech_rate">Speech Rate:</string>
    <string name="main_title_spell">Learn Spellings</string>
    <string name="next_spell">NEXT</string>
    <string name="exit_spell">EXIT</string>
    <string name="restart_spell">RESTART</string>
    <string name="buildmlearn_logo_spell">BuildmLearn Logo</string>
    <string name="completed_message_spell">Hurrah! You have completed.</string>
    <string name="spell_it_spell">SPELL IT</string>
    <string name="skip_spell">SKIP</string>
    <string name="listen_spell">LISTEN</string>
    <string name="submit_spell">SUBMIT</string>
    <string name="enter_spelling">Enter Spelling</string>
    <string name="normal_spell">Normal</string>
    <string name="low_spell">Low</string>
    <string name="intro_text_spell">Press SPEAK when you are ready. You may adjust the speech rate using the slider. Listen to the words as many times before answering. If you are not sure, you can skip the word.</string>
    <string name="video_collection_title">Video Collection</string>
    <string name="video_collection_template">VideoCollectionTemplate</string>
    <string name="video_collection_description">Choose this template to create applications for learning from videos</string>
    <string name="video_collection_template_link">Link</string>
    <string name="video_collection_template_title">Title</string>
    <string name="video_collection_template_description">Description</string>
    <string name="video_collection_template_link_hint">Enter a link</string>
    <string name="video_collection_template_link_valid_hint">Enter a valid link</string>
    <string name="video_collection_template_description_hint">Enter Description</string>
    <string name="video_collection_or">OR</string>
    <string name="video_collection_youtube">youtube.com</string>
    <string name="video_collection_dailymotion">dailymotion.com</string>
    <string name="video_collection_vimeo">vimeo.com</string>
    <string name="video_collection_list">List of Videos :</string>
    <string name="video_collection_videoList">videoList</string>
    <string name="comprehension_title">Comprehension</string>
    <string name="comprehension_template">ComprehensionTemplate</string>
    <string name="comprehension_description">Choose this template to create applications for learning from comprehensions</string>
    <string name="comprehension_template_title_hint">Enter a title</string>
    <string name="comprehension_template_timer_correct_hint">Max time :: 999,999,999 </string>
    <string name="comprehension_navigation_drawer_open">Open navigation drawer</string>
    <string name="comprehension_navigation_drawer_close">Close navigation drawer</string>
    <string name="comprehension_previous">PREVIOUS</string>
    <string name="comprehension_next">NEXT</string>
    <string name="comprehension_about_us">About Us</string>
    <string name="comprehension_about_text">This application has been developed using the BuildmLearn Toolkit.\n\nTo know more about BuildmLearn Toolkit visit <a href="https://buildmlearn.org/">here</a>.</string>
    <string name="comprehension_buildmlearn_logo">BuildmLearn Logo</string>
    <string name="comprehension_go_to_questions">GO TO QUESTIONS</string>
    <string name="comprehension_passage_title">Passage :</string>
    <string name="comprehension_completed_message">Hurrah! You have completed the Comprehension.</string>
    <string name="valid_before_setting_answer">Enter a valid option before marking it as answer.</string>
    <string name="comprehension_select_option_3_first">Enter option 3 first.</string>
    <string name="comprehension_template_choose_correct_option">Choose a correct option.</string>
    <string name="comprehension_template_valid_option">Enter a valid option.</string>
    <string name="dictation_title">Dictation</string>
    <string name="dictation_template">DictationTemplate</string>
    <string name="dictation_description">Choose this template to create applications for practising dictation</string>
    <string name="dictation_template_title_hint">Enter a title</string>
    <string name="dictation_template_passage_hint">Enter text or upload file.</string>
    <string name="match_title">Match</string>
    <string name="match_template">MatchTemplate</string>
    <string name="match_description">Choose this template to create applications for practising match the following.</string>
    <string name="spelling_assets_name">spelling_content.xml</string>
    <string name="hint_quiz_name">Template Name</string>
    <string name="label_quiz">Template Name</string>
    <string name="hint_author">Name</string>
    <string name="label_author">Author</string>
    <string name="menu_save_template">Save Template</string>
    <string name="menu_simulate">Simulate</string>
    <string name="menu_delete_template_item">Delete</string>
    <string name="menu_edit_template_item">Edit</string>
    <string name="bottom_sheet_share_apk">Share APK</string>
    <string name="bottom_sheet_save_apk">Save APK</string>
    <string name="bottom_sheet_save_project">Save Project</string>
    <string name="menu_select_all">Select All</string>
    <string name="menu_unselect_all">Unselect All</string>
    <string name="menu_search">Select All</string>
    <string name="main_title">BuildmLearn</string>
    <string name="main_subtitle">Toolkit</string>
    <string name="menu_load_apks">Saved APKs</string>
    <string name="enter_video">ENTER</string>
    <string name="by_video">by</string>
    <string name="anupam_video" translatable="false">Anupam</string>
    <string name="background_image_video">Background Image</string>
    <string name="buildmlearn_logo_video">BuildmLearn Logo</string>
    <string name="comprehension_meta_title">Title</string>
    <string name="comprehension_meta_title_of_passage">Title of Passage</string>
    <string name="comprehension_meta_passage">Passage</string>
    <string name="comprehension_meta_enter_passage">Enter Passage or Upload a file</string>
    <string name="or">OR</string>
    <string name="upload">UPLOAD</string>
    <string name="first_list_title">First List Title</string>
    <string name="enter_first_list_title">Enter First List Title</string>
    <string name="second_list_title">Second List Title</string>
    <string name="enter_second_list_title">Enter Second List Title</string>
    <string name="first_list_item_match">First List Item</string>
    <string name="second_list_item_match">Second List Item</string>
    <string name="enter_first_list_item_match">Enter First List Item</string>
    <string name="enter_second_list_item_match">Enter Second List Item</string>
    <string name="meta_title">Title</string>
    <string name="meta_title_match_hint">Enter Title</string>
    <string name="bottom_sheet_share_project">Share Project</string>
    <string name="move_up">Move Up</string>
    <string name="move_down">Move Down</string>
</resources>