<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Hiding publish icon until the api is ready-->
    <!--<item-->
        <!--android:id="@+id/publish_apk"-->
        <!--android:icon="@drawable/publish_apk"-->
        <!--android:title="@string/bottom_sheet_publish" />-->
    <item
        android:id="@+id/save_apk"
        android:icon="@drawable/save_apk"
        android:title="@string/bottom_sheet_save_apk" />
    <item
        android:id="@+id/save_project"
        android:icon="@drawable/save_project"
        android:title="@string/bottom_sheet_save_project" />

    <item
        android:id="@+id/share_apk"
        android:icon="@drawable/share_apk"
        android:title="@string/bottom_sheet_share_apk" />

    <item
        android:id="@+id/share_project"
        android:icon="@drawable/share_project"
        android:title="@string/bottom_sheet_share_project" />


</menu>