<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        style="@style/TextView.Caption.Light"
        android:text="@string/first_list_item_match"
        android:textColor="@color/black_secondary_text" />

    <EditText
        android:id="@+id/first_list_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_first_list_item_match"
        android:inputType="textPersonName" />

    <TextView
        style="@style/TextView.Caption.Light"
        android:text="@string/second_list_item_match"
        android:textColor="@color/black_secondary_text" />

    <EditText
        android:id="@+id/second_list_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_second_list_item_match"
        android:inputType="textMultiLine" />

</LinearLayout>