<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.buildmlearn.toolkit.activity.TemplateEditor">

    <item
        android:id="@+id/action_move_up"
        android:icon="@drawable/ic_keyboard_arrow_up_white_24dp"
        android:orderInCategory="1"
        android:title="@string/move_up"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_move_down"
        android:icon="@drawable/ic_keyboard_arrow_down_white_24dp"
        android:orderInCategory="2"
        android:title="@string/move_down"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/menu_edit_template_item"
        android:orderInCategory="3"
        android:title="@string/menu_edit_template_item"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/menu_delete_template_item"
        android:orderInCategory="4"
        android:title="@string/menu_delete_template_item"
        app:showAsAction="always" />
</menu>
