<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.buildmlearn.toolkit.activity.TemplateEditor">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:title="@string/menu_search"
        android:hint="@string/menu_search_hint_templateseditor"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/save_template"
        android:orderInCategory="2"
        android:title="@string/menu_save_template"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_simulate"
        android:icon="@drawable/menu_simulate"
        android:orderInCategory="1"
        android:title="@string/menu_simulate"
        app:showAsAction="ifRoom" />
</menu>
